[package]
name = "spwd"
authors = ["Emilly S.H./M.S."]
description = "Print the current working directory in a shortened format"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
